Add some text to the website

--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
-
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 <title>FORMATIONGIT.COM</title>
@@ -38,7 +36,7 @@
 	        <h1>Un paragraphe utile</h1>
 
       <p>
-	  Ceci est du texte très utile.
+	  Ceci est du texte très utile. Voici un autre texte dans le paragraphe.
 	 <br><br>
 	  </p>  
     </div>
