--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">FORMATIONGIT.COM</div>
+    <div class="headtitle">FORMATIONGITD.COM</div>
   </div>
 
   <div id="menu"> 
     <ul>
       <li><a href="#" title="">ACCUEIL</a></li>
-      <li><a href="#" title="">A PROPOS</a></li>
+      <li><a href="about.html" title="">A PROPOS</a></li>
     </ul>
   </div>
 
