--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <ul>
       <li><a href="#" title="">ACCUEIL</a></li>
       <li><a href="about.html" title="">A PROPOS</a></li>
+      <li><a href="about.html" title="">CONTACT</a></li>
     </ul>
   </div>
 
