--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div id="menu"> 
     <ul>
-      <li><a href="#" title="">ACCUEIL</a></li>
+      <li><a href="#" title="">ACCUEIL REACTEUR</a></li>
       <li><a href="about.html" title="">A PROPOS</a></li>
     </ul>
   </div>
