--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="menu"> 
     <ul>
       <li><a href="#" title="">ACCUEIL</a></li>
-      <li><a href="about.html" title="">A PROPOS</a></li>
+      <li><a href="about.html" title="">A PROPOS DES PANDAS</a></li>
     </ul>
   </div>
 
