--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">FORMATIONGITD.COM</div>
+    <div class="headtitle">ESTELLE</div>
   </div>
 
   <div id="menu"> 
@@ -25,7 +25,7 @@
   </div>
 
 
-  <div id="content"> 
+ <div id="content"> 
 
     <div id="insidecontent"> <br>
       <h1>Bienvenue sur le site collaboratif de formation git</h1>
