--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="container"> 
 
   <div id="header">
-    <div class="headtitle">PASDECONFLITS.COM</div>
+    <div class="headtitle">PASTROPDECONFLITS.COM</div>
   </div>
 
   <div id="menu"> 
