--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-  <div id="footer"> <span>Copyright © 2005 | All Rights Reserved  </span> 
+  <div id="footer"> <span>Copyright toto © 2005 | All Rights Reserved  </span> 
   </div>
 
 </div>
